[package]
name = "astrolabe-mcp"
version = "0.1.0"
edition = "2021"

[lib]
name = "astrolabe_mcp"
path = "src/lib.rs"

[[bin]]
name = "astrolabe-mcp"
path = "src/main.rs"

[dependencies]
# MCP framework
rmcp = { version = "0.16", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Parsing
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-go = "0.21"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.21"
tree-sitter-elixir = "0.2"

# File walking
ignore = "0.4"

# Storage
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
indexmap = "2"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex
regex = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
